<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.notepadby.homework12.ActivityThree">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"

        android:editable="false"
        android:id="@+id/input"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:columnCount="4">
        <Button
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight="1"
            android:id="@+id/reset"
            android:text="@string/reset"/>
        <Button
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_rowWeight="1"
            android:id="@+id/root"
            android:text="@string/root"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/mem_show"
            android:text="@string/mem_show"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/mem_subtract"
            android:text="@string/mem_subtract"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/mem_add"
            android:text="@string/mem_add"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/div"
            android:text="@string/div"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/seven"
            android:text="@string/seven"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/eight"
            android:text="@string/eight"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/nine"
            android:text="@string/nine"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/multiply"
            android:text="@string/multiply"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/four"
            android:text="@string/four"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/five"
            android:text="@string/five"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/six"
            android:text="@string/six"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/minus"
            android:text="@string/minus"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/one"
            android:text="@string/one"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/two"
            android:text="@string/two"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/three"
            android:text="@string/three"/>
        <Button
            android:layout_rowSpan="2"
            android:layout_gravity="fill_vertical"
            android:layout_rowWeight="1"
            android:id="@+id/plus"
            android:text="@string/plus"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/zero"
            android:text="@string/zero"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/dot"
            android:text="@string/dot"/>
        <Button
            android:layout_rowWeight="1"
            android:id="@+id/equals"
            android:text="@string/equals"/>

    </GridLayout>

</LinearLayout>
